# ai-graph

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
aigraph/: __init__.py  agents.py  api.py  graphs.py  runner.py  tools.py  viz.py
aigraph/core/: agents.py  bus.py  context.py  graphs.py  injection.py  messages.py  nodes.py  runner.py  tools.py  viz.py
aigraph/interfaces/: ollama.py
tests/: test_smoke.py
